@@ -34,6 +34,8 @@ Avro 1.3.1 (unreleased)
 
     AVRO-453. More warning cleanup (Bruce Mitchener via massie)
 
+    AVRO-440. config.h output not correctly used (Bruce Mitchener via massie)
+
   BUG FIXES
 
     AVRO-424. Fix the specification of the deflate codec.
